--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cyberpunk-profile",
   "version": "0.1.0",
-  "homepage": "https://sobewon.github.io/cyberpunk/",
+  "homepage": "https://sobewon.github.io/about/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
